# lost_years

./: .gitignore  .travis.yml  Citation.cff  LICENSE  README.md  README.rst  pyproject.toml  readthedocs.yml  requirements.txt  setup.py
.github/workflows/: ci.yml  data-update.yml  docs.yml  python-publish.yml
docs/: Makefile  make.bat
docs/source/: api.md  cli.md  conf.py  examples.md  index.md  index.rst  lost_years.rst
docs/source/_static/: .gitkeep
docs/source/examples/: corona_virus.ipynb  corona_virus_fr.ipynb  corona_virus_fr_daily.ipynb  example.ipynb
docs/source/examples/data/: table_1.csv
examples/: corona_virus.ipynb  corona_virus_fr.ipynb  corona_virus_fr_daily.ipynb  example.ipynb
examples/covid19/: covid-cedc-quot.csv
lost_years/: __init__.py  data_sources.json  hld.py  ssa.py  types.py  utils.py  who.py
lost_years/data/: consolidate_data.py  hld_translation.csv  schemas.py  scrape-life-table-who.ipynb  ssa.csv  update_all_data.py  who_translation.csv
lost_years/data/hld/: update_hld_data.py
lost_years/data/ssa/: ssa.csv  update_ssa_data.py
lost_years/data/who/: scrape-life-table-who.ipynb  update_who_data.py
lost_years/tests/: __init__.py  input.csv  test_010_lost_years.py
tests/: test_010_lost_years.py  test_utils.py
