[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[project]
name = "lost_years"
version = "0.6.0"
description = "Get Expected Number of Years Lost"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Suriyan Laohaprapanon", email = "suriyant@gmail.com" },
    { name = "Gaurav Sood", email = "gsood07@gmail.com" },
]
maintainers = [
    { name = "Suriyan Laohaprapanon", email = "suriyant@gmail.com" },
    { name = "Gaurav Sood", email = "gsood07@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "pandas",
    "requests",
    "selenium>=4.38.0",
]
keywords = [
    "lost years",
    "life expectancy",
    "human life table",
    "mortality",
    "actuarial",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/gojiplus/lost_years"
Documentation = "https://gojiplus.github.io/lost_years/"
Repository = "https://github.com/gojiplus/lost_years.git"
Issues = "https://github.com/gojiplus/lost_years/issues"

[project.scripts]
lost_years_ssa = "lost_years.ssa:main"
lost_years_hld = "lost_years.hld:main"
lost_years_who = "lost_years.who:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov",
    "coverage",
]
dev = [
    "lost_years[test]",
    "ruff>=0.14.6",
    "mypy>=1.8.0",
    "pandas-stubs",
]
docs = [
    "sphinx>=7.0",
    "furo", 
    "sphinx-autodoc-typehints",
    "myst-parser",
]



[tool.uv.build-backend]
module-name = "lost_years"
module-root = ""
wheel-exclude = [
    "lost_years/data/**/*.zip",
    "lost_years/data/**/*.ipynb",
    "lost_years/data/**/update_*.py",
]
source-exclude = [
    "lost_years/data/**/*.zip",
    "lost_years/data/**/*.ipynb", 
    "lost_years/data/**/update_*.py",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"examples/**/*.ipynb" = ["E501", "UP031", "I001", "E402", "F401"]  # Allow notebook issues
"**/scrape-*.ipynb" = ["E501", "UP031", "I001", "E402", "F401", "E741"]  # Allow data notebook issues

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ""


[dependency-groups]
dev = [
    "ruff>=0.14.6",
    "mypy>=1.8.0",
    "pandas-stubs",
    "pytest>=7.0",
    "pytest-cov",
    "coverage",
    "types-requests>=2.32.4.20250913",
]


[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
# Be pragmatic about pandas type complexity
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
strict_equality = false

[[tool.mypy.overrides]]
module = [
    "selenium.*",
    "beautifulsoup4.*",
    "bs4.*"
]
ignore_missing_imports = true

# Additional overrides for pandas type complexity
[[tool.mypy.overrides]]
module = "lost_years.*"
disable_error_code = ["call-overload", "arg-type", "assignment"]
