[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[project]
name = "lost_years"
version = "0.7.0"
description = "Get Expected Number of Years Lost"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Suriyan Laohaprapanon", email = "suriyant@gmail.com" },
    { name = "Gaurav Sood", email = "gsood07@gmail.com" },
]
maintainers = [
    { name = "Suriyan Laohaprapanon", email = "suriyant@gmail.com" },
    { name = "Gaurav Sood", email = "gsood07@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "pandas",
    "requests",
    "selenium>=4.38.0",
]
keywords = [
    "lost years",
    "life expectancy",
    "human life table",
    "mortality",
    "actuarial",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/gojiplus/lost_years"
Documentation = "https://gojiplus.github.io/lost-years/"
Repository = "https://github.com/gojiplus/lost_years.git"
Issues = "https://github.com/gojiplus/lost_years/issues"

[project.scripts]
lost_years_ssa = "lost_years.ssa:main"
lost_years_hld = "lost_years.hld:main"
lost_years_who = "lost_years.who:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov",
    "coverage",
]
dev = [
    "lost_years[test]",
    "ruff>=0.14.6",
    "pandas-stubs",
    "pydoclint>=0.5.0",
    "pyright[nodejs]>=1.1.0",
]
docs = [
    "sphinx>=7.0",
    "furo", 
    "sphinx-autodoc-typehints",
    "myst-parser",
    "nbsphinx>=0.9.0",
    "ipykernel>=6.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
]



[tool.uv.build-backend]
module-name = "lost_years"
module-root = ""
wheel-exclude = [
    "lost_years/data/**/*.zip",
    "lost_years/data/**/*.ipynb",
    "lost_years/data/**/update_*.py",
]
source-exclude = [
    "lost_years/data/**/*.zip",
    "lost_years/data/**/*.ipynb", 
    "lost_years/data/**/update_*.py",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"examples/**/*.ipynb" = ["E501", "UP031", "I001", "E402", "F401"]  # Allow notebook issues
"**/scrape-*.ipynb" = ["E501", "UP031", "I001", "E402", "F401", "E741"]  # Allow data notebook issues

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ""


[dependency-groups]
dev = [
    "ruff>=0.14.6",
    "pandas-stubs",
    "pytest>=7.0",
    "pytest-cov",
    "coverage",
    "types-requests>=2.32.4.20250913",
    "pydoclint>=0.5.0",
    "pyright[nodejs]>=1.1.0",
    "preen>=0.1.0",
]
docs = [
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
]


[tool.pydoclint]
style = "google"
exclude = '\.git|\.tox|tests|lost_years/data/.*update.*\.py|lost_years/data/.*scrape.*'
check-return-types = false
check-yield-types = false
arg-type-hints-in-docstring = false
skip-checking-short-docstrings = true
skip-checking-raises = false

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.12"
pythonPlatform = "All"
include = ["lost_years"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "lost_years/data/**/update_*.py",
    "lost_years/data/**/scrape-*.ipynb",
    "examples/**/*.ipynb"
]
reportMissingImports = true
reportMissingTypeStubs = false
reportMissingModuleSource = false
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true
